--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   avatar           : "Huabo Lu.png"
   name             : "Huabo Lu"
   pronouns         : "he/him"
-  bio              : "Short biography for the left-hand sidebar"
+  bio              : "PhD Candidate in Transportation at Beihang University. Research interests include electric truck scheduling optimization, transportation energy systems, public transit operations, and intelligent scheduling in open-pit mining."
   location         : "Stockholm, Sweden"
   employer         : "Beihang University"
   uri              : 
