--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ author:
   avatar           : "Huabo Lu.png"
   name             : "Huabo Lu"
   pronouns         : "he/him"
-  bio              : "PhD Candidate in Transportation at Beihang University. Research interests include electric truck scheduling optimization, transportation energy systems, public transit operations, and intelligent scheduling in open-pit mining."
+  bio              : "PhD Candidate in Transportation at Beihang University. Research interests include Electric Trucks, Transportation Energy, Public Transportation, and Scheduling Optimization."
   location         : "Stockholm, Sweden"
   employer         : "Beihang University"
   uri              : 
